--- a/WeatherView/WeatherView.csproj
+++ b/WeatherView/WeatherView.csproj
@@ -9,11 +9,20 @@
 
   <ItemGroup>
     <None Remove="Assets\Background.jpg" />
+    <None Remove="Assets\Favorited.png" />
     <None Remove="Assets\HumidityImage.png" />
     <None Remove="Assets\image.png" />
     <None Remove="Assets\MaxTempArrow.png" />
     <None Remove="Assets\MinTempArrow.png" />
+    <None Remove="Assets\NotFavorite.png" />
+    <None Remove="Assets\SearchIcon.png" />
+    <None Remove="Assets\Sunrise.png" />
+    <None Remove="Assets\Sunset.png" />
     <None Remove="Assets\WindIcon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +31,9 @@
 
   <ItemGroup>
     <Resource Include="Assets\Background.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Favorited.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\HumidityImage.png">
@@ -34,6 +46,18 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\MinTempArrow.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\NotFavorite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\SearchIcon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Sunrise.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Sunset.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\WindIcon.png">
